--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .cabecalho-imagem {
-  height: 75px;
+  height: 60px;
 }
 
 .cabecalho-menu {
@@ -32,16 +32,18 @@ body {
   gap: 32px;
 }
 
-.icone {
-  font-family: 'Sarala', sans-serif;
-  color: #4c54c5;
-  font-weight: 400;
-  font-size: 25px
+.cabecalho-menu-item  {
+  font-family: "Montserrat", sans-serif;
+  color: #FFF2E7;
+  font-weight: 500;
+  font-size: 18px;
+  justify-content: space-around;
+  
 }
 
 .conteudo {
   margin-bottom: 48px;
-  border-top: 0.4px solid #FF5757;
+  border-top: 0.4px solid rgba(211, 52, 163, 0.53);
 }
 
 .conteudo-principal {
@@ -58,38 +60,40 @@ body {
 }
 
 .conteudo-principal-escrito-titulo {
-  font-family: 'Righteous', cursive;
-  font-weight: 400;
-  font-size: 64px;
-  color: #FFF2E7;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #BF4CC5;
 }
 
 .conteudo-principal-escrito-subtitulo {
-  font-family: 'Sarala', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 24px;
-  color: #ECD6C4;
+  font-size: 30px;
+  color: #ffffff;
 }
 
 .conteudo-principal-escrito-botao {
-  background-color: #ECD6C4;
+  background-color: rgba(211, 52, 163, 0.53);
+  cursor: pointer;
   width: 180px;
   height: 60px;
   border: none;
   box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
+  border-radius: 90px;
   font-family: 'Sarala', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  color: #2F2325;
+  font-weight: 100;
+  font-size: 20px;
+  color: #ffffff;
 }
 
 .conteudo-principal-escrito-botao:hover {
-  background-color: rgba(236, 214, 196, 0.53);
+  background-color: rgba(179, 164, 174, 0.53);
 }
 
 .conteudo-principal-imagem {
-  height: 430px;
+  height: 550px;
+
 }
 
 .conteudo-secundario {
@@ -101,12 +105,12 @@ body {
 }
 
 .conteudo-secundario-titulo {
-  border-top: 0.4px solid #FFF2E7;
+  border-top: 0.4px solid rgba(179, 164, 174, 0.53);
   padding-top: 48px;
-  font-family: 'Righteous', cursive;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 24px;
-  color: #FFF2EF;
+  color: rgba(240, 29, 187, 0.849);
   margin-bottom: 16px;
 }
 
@@ -116,14 +120,16 @@ body {
   font-size: 18px;
   color: #ECD6C4;
 }
-
-.rodape {
-    padding: 32px;
-    border-top: 0.4px solid #FFF2E7;
+.conteudo-paragrafo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  margin-top: 48px; 
 }
-
-.rodape-imagem {
-  height: 48px;
-  display: block;
-  margin: 0 auto;
+.conteudo-secundario-2{
+  font-family: 'Sarala', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #ECD6C4;
 }
