--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
 
 * {
-  margin: 0;
+  margin: 0%;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
@@ -9,7 +9,7 @@
 
 body {
   font-size: 100%;
-  background-image: url(img/couro.jpg);
+  background-image: url(img/layanefundo.jpg);
 
  
 
@@ -23,9 +23,6 @@ body {
   padding: 15px;
 }
 
-.cabecalho-imagem {
-  height: 60px;
-}
 
 .cabecalho-menu {
   display: flex;
@@ -34,7 +31,7 @@ body {
 
 .cabecalho-menu-item  {
   font-family: "Montserrat", sans-serif;
-  color: #FFF2E7;
+  color: #ffffff;
   font-weight: 500;
   font-size: 18px;
   justify-content: space-around;
@@ -63,7 +60,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   font-size: 40px;
-  color: #BF4CC5;
+  color: #b1abb1;
 }
 
 .conteudo-principal-escrito-subtitulo {
@@ -89,11 +86,6 @@ body {
 
 .conteudo-principal-escrito-botao:hover {
   background-color: rgba(179, 164, 174, 0.53);
-}
-
-.conteudo-principal-imagem {
-  height: 550px;
-
 }
 
 .conteudo-secundario {
@@ -206,4 +198,128 @@ body {
 .container .card:hover .content a{
   color:rgba(211, 52, 163, 0.53);
   background-color: white;
+}
+
+/* Todos os elementos da página */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* Elementos com o ID "titulo" */
+#titulo {
+  font-family: sans-serif;
+  color: #ffffff;
+  margin-left: 7%;
+} 
+
+/* Elementos com o ID "subtitulo" */
+#subtitulo {
+  font-family: sans-serif;
+  color: #BF4CC5;
+  margin-left: 10%;
+} 
+
+#check{
+  display: inline-block;
+}
+
+/* Elementos de tag <fieldset>*/
+fieldset {
+  border: 0;
+}
+
+/* Elemento de tag <body> */
+body{
+  background-color: #F0F8FF;
+  font-family: sans-serif;
+  font-size: 1em;
+  color: #BF4CC5;
+  margin-left: 36%;
+  margin-top: 2%;
+  justify-content: center;
+}
+
+/* Elementos de tags <body>, <input>, <Select>, <textarea> e <button> */
+input, select, textarea, button {
+  font-family: sans-serif;
+  font-size: 1em;
+  color: #BF4CC5;
+  border-radius: 5px;
+}
+
+/* Elementos de classe "grupo" nos estados das pseudoclasses "before" e "after" */
+.grupo:before, .grupo:after {
+  display: table;
+}
+
+/* Elementos de classe "grupo" no estado da pseudoclasse "after" */
+.grupo:after {
+  clear: both;
+}
+
+/* Elementos de classe "campo" */
+.campo {
+  margin-bottom: 1em;
+}
+
+/* Elementos de classe "campo" de tag <label> */
+.campo label {
+  margin-bottom: 0.2em;
+  color: #BF4CC5;
+  display: block;
+}
+
+/* Elementos de classe "campo" ou "grupo" de tag <fieldset> */
+fieldset.grupo .campo {
+  float:  left;
+  margin-right: 1em;
+}
+
+/* Elementos de classe "campo" das tags <input> com atributo text e email, da tag <select> e da tag <textarea>*/
+.campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea {
+  padding: 0.2em;
+  border: 1px solid #59429d;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+  display: block;
+}
+
+/* Elementos de classe "campo" de tag <select> e <option>*/
+.campo select option {
+  padding-right: 1em;
+}
+
+/* Elemento de classe "campo" com tag <input>, <select> e <textarea> tocas com estado da pseudoclasse "focus"*/
+.campo input:focus, .campo select:focus, .campo textarea:focus {
+  background: #E0E0F8;
+}
+
+/* Elemento de classe "botao" */
+.botao {
+  font-size: 1.2em;
+  color: #BF4CC5;
+  background: #666;
+  border: 0;
+  margin-bottom: 1em;
+  color: #ffffff;
+  padding: 0.2em 0.6em;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
+
+/* Elemento de classe "botao" com o estado da pseudoclasse "hover" */
+.botao:hover {
+  background: #CCBBFF;
+  box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
+  text-shadow: none;
+}
+
+/* Elementos de classe botão e de tag <select> */
+.botao, select{
+  cursor: pointer;
 }
